<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="toppings">Toppings</string>

    <string name="thankYou">\nThank You!</string>

    <string name="summaryName">\nName: <xliff:g id="name" example="Manu">%s</xliff:g></string>
    <string name="quantity">\nQuantity: <xliff:g id="quantity" example="1">%d</xliff:g></string>
    <string name="hasCreamTopping">\nHas Cream Topping? <xliff:g id="hasCream" example="Yes">%s</xliff:g></string>
    <string name="hasChocolateTopping">\nHas chocolate topping? <xliff:g id="hasChoco" example="No">%s</xliff:g></string>
    <string name="enterYourName">Enter your name</string>
    <string name="creamTopping">Cream Topping</string>
    <string name="chocolateTopping">Chocolate topping</string>
    <string name="viewOrder">View Order</string>
    <string name="totalPrice">Total price</string>
    <string name="coffeeAmount">Amount of coffees</string>
    <string name="yes">Yes</string>
</resources>